plugins {
  id 'java'
  id 'java-library'
  id 'jacoco'
}

group 'com.github.hmcts'
version 'DEV-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

repositories {
  mavenCentral()
  mavenLocal()
  maven { url 'https://jitpack.io' }
  jcenter()
}

task highLevelDataSetup(type: JavaExec) {
  mainClass = "uk.gov.hmcts.reform.civil.HighLevelDataSetupApp"
  classpath += sourceSets.main.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}


def versions = [
  junit              : '5.9.2',
  junitPlatform      : '1.9.2'
]

ext.libraries = [
  junit5: [
    "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
    "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
    "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
    "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
  ]
]

dependencies {
  implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.8'
  implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.3'
  implementation group: 'com.azure', name: 'azure-identity', version: '1.10.4'
  implementation group: 'com.azure', name: 'azure-security-keyvault-secrets', version: '4.7.1'
  implementation group: 'com.microsoft.azure', name: 'azure-storage', version: '8.6.6'

  testImplementation libraries.junit5
}
